@@ -115,6 +115,7 @@
        unversioned items. See issue #60 for details. (Stefan)
 - NEW: dialog to make sparse checkouts easier. See
        issue #61 for details. (Stefan)
+- NEW: Ctrl-A selects all lines in TortoiseMerge. (Stefan)
 - BUG: Merged revisions must be counted only 
        once in stats (Stefan Fuhrmann)
 - BUG: Relative Webviewer urls didn't work from the 
